--- a/Conexxa/AppDomain/LaunchScreen.storyboard
+++ b/Conexxa/AppDomain/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ConexxaLogoHorizontal" translatesAutoresizingMaskIntoConstraints="NO" id="abA-3T-wF4">
-                                <rect key="frame" x="76.666666666666686" y="362" width="240" height="128"/>
+                                <rect key="frame" x="76.666666666666686" y="374.66666666666669" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="UFR-Zq-9Pt"/>
                                     <constraint firstAttribute="height" constant="128" id="eh3-Kf-atv"/>
@@ -28,8 +28,8 @@
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" name="LaunchScreenBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="abA-3T-wF4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="s16-cF-7bE"/>
-                            <constraint firstItem="abA-3T-wF4" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sCN-eQ-UuA"/>
+                            <constraint firstItem="abA-3T-wF4" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="s16-cF-7bE"/>
+                            <constraint firstItem="abA-3T-wF4" firstAttribute="centerY" secondItem="Bcu-3y-fUS" secondAttribute="centerY" id="sCN-eQ-UuA"/>
                         </constraints>
                     </view>
                 </viewController>
